# meta_log

./: .clang-format  CMakeLists.txt  README.md
example/: main.cpp
src/: Log.cpp  Log.h
src/details/: Common.cpp  Common.h  FileHelper.cpp  FileHelper.h  IterableContainer.h  LogMessage.cpp  LogMessage.h  Logging.cpp  Logging.h  PeriodicWorker.cpp  PeriodicWorker.h  StopWatch.h
src/loggers/: BasicFileLogger.cpp  BasicFileLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  Logger.cpp  Logger.h  RotateFileLogger.cpp  RotateFileLogger.h
